fix(DataTable): Make text stay visual while resizing right align columns (#1488)
* Initial commit

* Making sure currency field clips correctly

* Cleaning up code

* feat(TimePicker): Add Save and Cancel buttons to Time Picker (#1481)

* feat(TimePicker): Add Save and Cancel buttons to Time Picker

* TimePickerInput should emit save and cancel events as well

* feat(Picker): Specify parent of picker components (#1483)

* fix(imask): upping the max date on all date/text masks from 2030 to 2100

* upping node version for firebase action

* setting firebase tools version instead of node version

* fix(DatePickerInput): Default mask to a permissive number/separator r… (#1495)

fix(DatePickerInput): Default mask to a permissive number/separator regex


* chore(deps-dev): bump @babel/traverse from 7.18.5 to 7.23.2

Bumps [@babel/traverse](https://github.com/babel/babel/tree/HEAD/packages/babel-traverse) from 7.18.5 to 7.23.2.
- [Release notes](https://github.com/babel/babel/releases)
- [Changelog](https://github.com/babel/babel/blob/main/CHANGELOG.md)
- [Commits](https://github.com/babel/babel/commits/v7.23.2/packages/babel-traverse)

---
updated-dependencies:
- dependency-name: "@babel/traverse"
  dependency-type: indirect
...


* fix(ExpansionPanelHeader): adding default heights to expansion-panel-header input properties

* fix(Collection): fixing a strict=true TS compilation error

* removing temp comments

* feat(Progress): adding 'flash' state to progress bar

* tweaking UX

* making 'flash' progress bar dynamically fit its container

* chore(deps-dev): bump follow-redirects from 1.15.2 to 1.15.4 (#1497)

Bumps [follow-redirects](https://github.com/follow-redirects/follow-redirects) from 1.15.2 to 1.15.4.
- [Release notes](https://github.com/follow-redirects/follow-redirects/releases)
- [Commits](https://github.com/follow-redirects/follow-redirects/compare/v1.15.2...v1.15.4)

---
updated-dependencies:
- depe

--- a/projects/novo-elements/src/elements/data-table/data-table.component.scss
+++ b/projects/novo-elements/src/elements/data-table/data-table.component.scss
@@ -69,6 +69,9 @@ cdk-table {
 
 .novo-data-table-cell-align-right {
   text-align: right;
+  justify-content: flex-end;
+  overflow: hidden;
+  text-overflow: clip;
 }
 
 .novo-data-table-header-row,
